--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
             </tr>
           </thead>
           <tbody>
-            <% for(let user of listaUsuarios){ %>
+            <% for(let user of usuarios){ %>
             <tr>
               <th class="text-center" scope="row"><%=user.id%></th>
               <td class="text-center"><%=user.firstname%></td>
